avauddec: handle gapless WMA properly
In order to fix the regression described #1348 (closed), we are going to first restore the behavior of our wrapper with FFmpeg pre https://trac.ffmpeg.org/ticket/7473, by outputting lead-in samples that FFmpeg now would like us to skip, and discarding trailing samples that FFmpeg used to not give us.
This results in our decoder outputting the same data before and after the FFmpeg patch, but we should now have a reflexion on how to fix this properly, the main complicating factor being that the base decoder class really wants subclasses to provide an accurate mapping from input to output samples, this in order to preserve metadata.